# india-runs

./: .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  pyproject.toml  rank.py  submission_metadata.yaml
api/: adapters.py  main.py
api/models/: schemas.py
api/routes/: candidates.py  graph.py  health.py  rank.py  rankings.py  system.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  demoData.ts  types.ts
frontend/src/components/: Icon.tsx  TalentRadar.tsx  ThemeToggle.tsx
frontend/src/layout/: AppLayout.tsx
frontend/src/lib/: avatar.ts
frontend/src/pages/: CandidateDetail.tsx  CandidateSearch.tsx  Dashboard.tsx  KnowledgeGraph.tsx  TalentDNA.tsx
src/data/: loader.py  skill_ontology.py
src/eval/: metrics.py
src/ranker/: behavioral_scoring.py  career_analyzer.py  config.py  features.py  honeypot_detector.py  location_scorer.py  pipeline.py  reasoning_generator.py  scoring.py  skill_matcher.py  title_classifier.py
