[project]
name = "india-runs"
version = "1.0.0"
description = "Intelligent Candidate Discovery & Ranking Engine"
requires-python = ">=3.10"
dependencies = [
    "orjson>=3.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = ["httpx>=0.27"]

[tool.uv]
package = false
